2002-04-21  Anders Carlsson  <andersca@gnu.org>

	* gnome-vfs.keys.in:
	Doh, it's "video", not "vidoe".
	
	* icons/Makefile.am:
	Add trailing slash.
	
2002-04-21  Anders Carlsson  <andersca@gnu.org>

	* gnome-vfs.keys.in:
	Fix the component id mess, we now use 
	"short_list_component_iids" for gnome-vfs 2
	and "short_list_component_iids_<userlevel>" for
	gnome-vfs 1. Also add Haskell and WMV definitions.
	
	* gnome-vfs.mime:
	Add haskell and WMV extensions.
	
	* icons/Makefile.am:
	* icons/gnome-text-x-haskell.png:
	* icons/gnome-text-x-literate-haskell.png:
	* icons/gnome-video-x-ms-wmv.png:
	Add Haskell and WMV icons.
	
2002-04-18  Michael Meeks  <michael@ximian.com>

	* gnome-vfs.keys.in: update all the OAFIIDs
	to the new nautilus versions, needs a new
	nautilus to play well.

2002-03-28  Seth Nickell  <snickell@stanford.edu>

	* configure.in:

	Bump version number to 1.0.6

2002-03-19  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.applications:
	* gnome-vfs.mime:

	Add Wine for windows executables.

	Fix regexp for anim files.
	
2002-03-16  Seth Nickell  <snickell@stanford.edu>

	* configure.in:

	Up the version number to 1.0.5.
	
	* gnome-vfs-mime-magic:

	Add magic for detecting libraries and core files, from
	Havard Wigtil (sorry, the character didn't want to stick
	in the file correctly :-)
	
	* gnome-vfs.keys.in:

	Better descriptions for .m3u files and for RealMedia
	files.
	
2002-03-16  Wang Jian  <lark@linux.net.cn>

	* configure.in: Added "zh_CN" to ALL_LINGUAS.

2002-03-05  Seth Nickell  <snickell@stanford.edu>

	* configure.in:
	* icons/Makefile.am:
	* icons/gnome-text-plain.png:

	Delete icon because Nautilus wants to have text previews.
	
2002-03-03  Bastien Nocera  <hadess@hadess.net>

	* icons/Makefile.am: install the icons mentioned underneath there

2002-02-27  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs-mime-magic:
	* gnome-vfs.applications:
	* gnome-vfs.keys.in: