@@ -1,3 +1,7 @@
+2002-04-23  Jody Goldberg <jody@gnome.org>
+
+	* gnome-vfs.keys.in : gnumeric is now usable as a component
+
 2002-04-21  Anders Carlsson  <andersca@gnu.org>
 
 	* gnome-vfs.keys.in:
